--- a/contact.html
+++ b/contact.html
@@ -72,18 +72,21 @@
 .dropdown-content a:hover {
   color: rgb(73, 62, 224);
 }
-body{
+        /*Stilizimi i pjesës body dhe titullit*/
+            body{
                 background-color: whitesmoke;
             }
             h1{
                 background-image: url("black.jpg");
             }
+        /*Tabela e pjesës së kontaktit */
             table{
                 margin-top: 100px;
                 margin-bottom: 100px;
                 margin-right: 150px;
                 margin-left: 150px;
             }
+        /* Rregullimi i formave (email,pasword,text)*/
             form{
                 margin-top: -350px;
                 margin-bottom: 200px;
@@ -94,6 +97,7 @@ body{
             input{
                 height:1cm;
             }
+        /* Stilizimi i butonit */
             .button{
                 color:white;
                 background-color: rgb(78, 9, 9);
