--- a/contact.html
+++ b/contact.html
@@ -198,7 +198,7 @@
         <!--Numri i telefonit-->
         <tr>
             <td>
-                <img src="phone-call.jpg" alt="Phone Icon" width="35" height="35">
+                <img src="images/phone-call.jpg" alt="Phone Icon" width="35" height="35">
             </td>
             <td style="background-color: blanchedalmond;">
                 <p  align="left" style="color:goldenrod">Phone</p>
@@ -211,7 +211,7 @@
         <!--Adresa-->
         <tr>
             <td>
-                <img src="address-icon.jpg" alt="Address Icon" width="35" height="35">
+                <img src="images/address-icon.jpg" alt="Address Icon" width="35" height="35">
             </td>
             <td style="background-color: blanchedalmond;">
                 <p align="left" style="color:goldenrod">Our Address</p>
@@ -227,7 +227,7 @@
         <!--E-mail Adresa-->
         <tr>
             <td>
-                <img src="email.jpg" alt="Email Icon" width="35" height="35">
+                <img src="images/email.jpg" alt="Email Icon" width="35" height="35">
             </td>
             <td style="background-color: blanchedalmond;">
                 <p align="left" style="color:goldenrod">Email</p>
