--- a/contact.html
+++ b/contact.html
@@ -77,7 +77,7 @@
                 background-color: whitesmoke;
             }
             h1{
-                background-image: url("black.jpg");
+                background-image: url("images/black.jpg");
             }
         /*Tabela e pjesës së kontaktit */
             table{
