--- a/shop.html
+++ b/shop.html
@@ -69,7 +69,7 @@
                 background-color: whitesmoke;
             }
             h1{
-                background-image: url("black.jpg");
+                background-image: url("images/black.jpg");
             }
             .div1, .div2, .div3, .div4, .div5, .div6, .div7, .div8{
                 width: 200px;
@@ -211,7 +211,7 @@
         </h1>
 
         <div class="div1">
-            <img src="softchair1.jpg" alt="Soft Chair 1" width="150" height="150">
+            <img src="images/softchair1.jpg" alt="Soft Chair 1" width="150" height="150">
             <p>Soft Chair</p>
             <p><b>$ 1.900</b></p>
             <form>
@@ -220,7 +220,7 @@
         </div>
 
         <div class="div2">
-            <img src="coffeetable1.jpg" alt="Coffee Table 1" width="150" height="150">
+            <img src="images/coffeetable1.jpg" alt="Coffee Table 1" width="150" height="150">
             <p>Coffee Table</p>
             <p><b>$ 1.100</b></p>
             <form>
@@ -229,7 +229,7 @@
         </div>
       
         <div class="div3">
-            <img src="nightlight1.jpg" alt="Night Light 1" width="150" height="150">
+            <img src="images/nightlight1.jpg" alt="Night Light 1" width="150" height="150">
             <p>Night Light</p>
             <p><b>$ 870</b></p>
             <form>
@@ -238,7 +238,7 @@
         </div>
 
         <div class="div4">
-            <img src="tabledesk1.jpg" alt="Desk Table 1" width="150" height="150">
+            <img src="images/tabledesk1.jpg" alt="Desk Table 1" width="150" height="150">
             <p>Desk Table</p>
             <p><b>$ 1.400</b></p>
             <form>
@@ -247,7 +247,7 @@
         </div>
 
         <div class="div5">
-            <img src="softchair2.jpg" alt="Soft Chair 2" width="150" height="150">
+            <img src="images/softchair2.jpg" alt="Soft Chair 2" width="150" height="150">
             <p>Soft Chair</p>
             <p><b>$ 1.690</b></p>
             <form>
@@ -256,7 +256,7 @@
         </div>
 
         <div class="div6">
-            <img src="coffeetable2.jpg" alt="Coffee Table 2" width="150" height="150">
+            <img src="images/coffeetable2.jpg" alt="Coffee Table 2" width="150" height="150">
             <p>Coffee Table</p>
             <p><b>$ 1.500</b></p>
             <form>
@@ -265,7 +265,7 @@
         </div>
 
         <div class="div7">
-            <img src="nightlight2.jpg" alt="Night Light 2" width="150" height="150">
+            <img src="images/nightlight2.jpg" alt="Night Light 2" width="150" height="150">
             <p>Night Light</p>
             <p><b>$ 790</b></p>
             <form>
@@ -274,7 +274,7 @@
         </div>
 
         <div class="div8">
-            <img src="desktable2.jpg" alt="Desk Table 2" width="150" height="150">
+            <img src="images/desktable2.jpg" alt="Desk Table 2" width="150" height="150">
             <p>Desk Table</p>
             <p><b>$ 1.750</b></p>
             <form>
