--- a/shop.html
+++ b/shop.html
@@ -65,12 +65,14 @@
 .dropdown-content a:hover {
   color: rgb(73, 62, 224);
 }
+            /* Stilizimi i pjesës body dhe titullit */
             body{
                 background-color: whitesmoke;
             }
             h1{
                 background-image: url("images/black.jpg");
             }
+            /* Rregullimi i përbashkët i div-ave */
             .div1, .div2, .div3, .div4, .div5, .div6, .div7, .div8{
                 width: 200px;
                 height: 250px;
@@ -78,6 +80,7 @@
                 color: black;
                 font-family: Arial, Helvetica, sans-serif;
             }
+            /* Rregullimi i div-ave veq e veq*/
             .div1{
                 margin: 90px 10px 30px 200px;
             }
@@ -102,11 +105,13 @@
             .div8{
                 margin: -250px 10px -10px 1020px;
             }
+            /* Stilizimi i përbashkët i button-ve */
             .button1, .button2, .button3, .button4, .button5, .button6, .button7, .button8{
                 color:white;
                 background-color: rgb(78,9,9);
                 text-align: center;
             }
+            /* Pjesa Fieldset*/
             .fld1{
               background-color:beige;
               border-color: rgb(78,9,9);
