--- a/shopdetail.html
+++ b/shopdetail.html
@@ -65,18 +65,22 @@
 .dropdown-content a:hover {
   color: rgb(73, 62, 224);
 }
+        /* Stilizimi i pjesës body dhe titullit*/
         body{
             background-color: whitesmoke;
         }
         h1{
-            background-image: url("black.jpg");
+            background-image: url("images/black.jpg");
         }
+        /* Rregullimi i tabelës së parë*/
         table{
           margin: 60px 30px 50px 50px;
         }
+        /* Rregullimi i tabelës së dytë */
         .table1{
           margin: 65px 20px 50px 50px;
          }
+        /* Rregullimi div-it */
         .square{
             width:350px;
             height:350px;
@@ -84,6 +88,7 @@
             text-align: center;
             margin: -675px 190px 200px 885px;  
         }
+        /* Rregullimi i button-it */
         .button{
                 color:white;
                 background-color: rgb(78, 9, 9);
@@ -181,15 +186,15 @@
 
     <table>
       <tr>
-        <td colspan="3" rowspan="4"><img src="vintagearmchair.jpg" alt="Vintage Arm Chair" width="300" height="300"></td>
-        <td colspan="3" rowspan="4"><img src="armchair1.jpg" alt="Arm Chair 1" width="300" height="300"></td>
+        <td colspan="3" rowspan="4"><img src="images/vintagearmchair.jpg" alt="Vintage Arm Chair" width="300" height="300"></td>
+        <td colspan="3" rowspan="4"><img src="images/armchair1.jpg" alt="Arm Chair 1" width="300" height="300"></td>
       </tr>
       </table>
 
       <table class="table1">
       <tr>
-        <td colspan="3" rowspan="4"><img src="armchair2.jpg" alt="Arm Chair 2" width="300" height="300"></td>
-        <td colspan="3" rowspan="4"><img src="armchair3.jpg" alt="Arm Chair 3" width="300" height="300"></td>
+        <td colspan="3" rowspan="4"><img src="images/armchair2.jpg" alt="Arm Chair 2" width="300" height="300"></td>
+        <td colspan="3" rowspan="4"><img src="images/armchair3.jpg" alt="Arm Chair 3" width="300" height="300"></td>
       </tr>
     </table>
 
