INT-10: Modify home page, link all pages in header

--- a/about.html
+++ b/about.html
@@ -93,14 +93,14 @@
                 <a href="home.html">HOME <i class="fas fa-angle-down"></i></a>
               </div>
               <div class="dropdown-content">
-                <a href="#">HOME SLIDER</a>
+                <a href="home.html">HOME SLIDER</a>
                 <a href="#">HOME IMAGE</a>
                 <a href="#">HOME VIDEO</a>
               </div>
             </div>
             <div class="dropdown">
               <div class="dropdown__main">
-                <a href="projects.html"
+                <a href="#"
                   >PROJECTS <i class="fas fa-angle-down"></i
                 ></a>
               </div>
@@ -112,17 +112,17 @@
             </div>
             <div class="dropdown">
               <div class="dropdown__main">
-                <a href="#">ABOUT</a>
+                <a href="about.html">ABOUT</a>
               </div>
             </div>
             <div class="dropdown">
               <div class="dropdown__main">
-                <a href="blog.html">BLOG <i class="fas fa-angle-down"></i></a>
+                <a href="blog_grid.html">BLOG <i class="fas fa-angle-down"></i></a>
               </div>
               <div class="dropdown-content">
                 <a href="blog_grid.html">BLOG GRID</a>
                 <a href="blog_list.html">BLOG LIST</a>
-                <a href="#">BLOG POST</a>
+                <a href="blog_post.html">BLOG POST</a>
               </div>
             </div>
             <div class="dropdown">
@@ -130,13 +130,13 @@
                 <a href="shop.html">SHOP <i class="fas fa-angle-down"></i></a>
               </div>
               <div class="dropdown-content">
-                <a href="#">SHOP</a>
-                <a href="#">SHOP DETAIL</a>
+                <a href="shop.html">SHOP</a>
+                <a href="shopdetail.html">SHOP DETAIL</a>
               </div>
             </div>
             <div class="dropdown">
               <div class="dropdown__main">
-                <a href="#">CONTACT</a>
+                <a href="contact.html">CONTACT</a>
               </div>
             </div>
           </div>
