--- a/about.html
+++ b/about.html
@@ -197,7 +197,7 @@
     <div id="square3">
     	<div class="headtitle2">
     		<h2 class="about_us__article-heading">PROFESSIONAL TEAM</h2>
-    		<p class"article-title" >Meet our head team:</p><br><br>
+    		<p class ="article-title" >Meet our head team:</p><br><br>
     	</div>
     </div>
    
